<?xml version="1.0"?>
<package format="2">
  <name>mujoco_hog</name>
  <version>1.0.0</version>
  <description>The mujoco_hog package</description>

  <url type="repository">https://github.com/ubi-agni/mujoco_hog_plugin</url>
  <url type="bugtracker">https://github.com/ubi-agni/mujoco_hog_plugin/issues</url>

  <maintainer email="jleichert@techfak.uni-bielefeld.de">Julian Leichert</maintainer>
  <author>Julian Leichert</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf2</depend>
  <depend>mujoco_ros</depend>

  <export>
    <mujoco_ros plugin="${prefix}/mujoco_hog_plugin.xml" />
  </export>
</package>
